--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="section-border"></div>
         <div class="nav-items">
           <a href="#home">Home</a>
-          <a href="#about">About</a>
-          <a href="#skills">Skills</a>
-          <a href="#projects">Projects</a>
-          <a href="#contact">Contact</a>
+          <a href="#about">Sobre</a>
+          <a href="#skills">Habilidades</a>
+          <a href="#projects">Projetos</a>
+          <a href="#contact">Contato</a>
         </div>
       </nav>
 
