--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="meu Potfolio" content="Mon Portfolio">
+    <meta name="meu Portfólio" content="Mon Portfolio">
     <link rel="shortcut icon" href="asset/images/J.png" type="image/x-icon">
-    <link rel="icon" type="image/png" href="/asset/images/photo.png" />
+    <link rel="icon" type="image/png" href="/asset/images/J.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="JPF/style.css" />
+    <link rel="stylesheet" href="asset/style.css" />
     <script
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
@@ -19,8 +19,8 @@
       nomodule
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"
     ></script>
-    <link rel="stylesheet" href="JPF/style.css" />
-    <title>JOÃO PEDRO FERRIRA</title>
+    <link rel="stylesheet" href="asset/style.css" />
+    <title>Portfólio - JPF</title>
   </head>
   <body>
     <div class="container" id="particles-js">
@@ -81,7 +81,7 @@
             </div>
             <div class="developer-img">
               <div class="dev-img-wrapper">
-                <img src= "./asset/images/IMG_20240430_201611_029.jpg" alt="foto do autor" />
+                <img src= "./asset/images/IMG_20240430_201611_029.jpg" alt="foto do autor" width="250px" />
               </div>
             </div>
           </div>
@@ -294,7 +294,7 @@
               </div>
             </div>
             <div class="phone">
-              <a href="https://t.me/programadordesignerpro"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/Joao-Pedro-F"><i class="fa-brands fa-github"></i></a>
               <div class="contact-info">
                 <span>Git Hub</span>
                 <span>Joao-Pedro-F</span>
@@ -337,22 +337,21 @@
 
       <footer class="footer">
         <div class="icons">
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-jp-a34752287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="https://github.com/Joao-Pedro-F"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="copyright">
-            <p>&copy;Joao_pedro_860JP <span>JPF</span>Todos os direitos reservados 2024</p>
+            <p>&copy;Joao_pedro_860JP <span>JPF</span></p>
         </div>
         <div class="author">
             <p>Feito por<span>João Pedro Ferrira</span></p>
         </div>
       </footer>
 
-    </div>
-
-    <script src="JPF/particles.js"></script>
+    </div>  
+    <script src="asset/particles.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="JPF/main.js"></script>
+    <script src="asset/main.js"></script>
   </body>
 </html>
