--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
           </div>
           <div class="header-right">
             <div class="circle">
-              <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-jp-a34752287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-jp-a34752287?utm_source=sare&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin-in"></i></a>
               <a href="https://github.com/Joao-Pedro-F"><i class="fa-brands fa-github"></i></a>
               <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
             </div>
             <div class="developer-img">
               <div class="dev-img-wrapper">
-                <img src= "./asset/images/IMG_20240430_201611_029.jpg" alt="foto do autor" width="250px" />
+                <img src= "./asset/images/jpf.png" alt="foto do autor" />
               </div>
             </div>
           </div>
@@ -105,6 +105,7 @@
           <div class="about-left">
             <div class="about-image">
               <img src="./asset/images/628463068.png" alt="Photo de l'auteur" />
+              
             </div>
           </div>
           <div class="about-right">
