Adiciona nova alteração

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <title>Portfólio - JPF</title>
   </head>
   <body>
+
     <div class="container" id="particles-js">
       <div class="menu-icon">
         <div class="line line-1"></div>
@@ -386,6 +387,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="asset/main.js"></script>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
+
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
+    
 
   </body>
 </html>
