--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="techs">
               <span>LIBRAS.COM</span>
             </div>
-            <h3 class="project-name">LIBRAs</h3>
+            <h3 class="project-name">LIBRAS</h3>
             <p class="project-desc">
               LIBRAS é a sigla de Língua Brasileira de Sinais, um conjunto de formas gestuais <br>
               utilizado por deficientes auditivos para a comunicação entre eles e outras pessoas,<br> 
