--- a/asset/abc.html
+++ b/asset/abc.html
@@ -16,8 +16,8 @@
 
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="home.html">
-            <img src="./img/Texto do seu parágrafo (3).png" width="40px" height="40px">
+          <a class="navbar-brand text-white" href="/home.html">
+            <img src="/img/Texto do seu parágrafo (3).png" width="40px" height="40px">
             Libras.com</a>
             <button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon text-primary"></span>
@@ -25,20 +25,20 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-white" href="abc.html">ABC</a>
+                <a class="nav-link text-white" href="./abc.html">ABC</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="numeros.html">Números</a>
+                <a class="nav-link text-white" href="./numeros.html">Números</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Acesse
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Curso-de-Libras.html">Curso De Libras</a></li>
+                  <li><a class="dropdown-item" href="./Curso-de-Libras.html">Curso De Libras</a></li>
                   <li><a class="dropdown-item" href="https://t.me/librascom">Grupo Do Telegram</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="./login.html">Login</a></li>
+                  <li><a class="dropdown-item" href="/login/login.html">Login</a></li>
                 </ul>
               </li>
               
@@ -52,7 +52,7 @@
 
     <p>
       Além da profissão de intérprete, outros mecanismos e instrumentos de divulgação da linguagem ajudam a tornar <br> a Língua Brasileira de Sinais mais acessível a todos, como o<strong> dicionário de LIBRAS</strong> , cursos de formação e o <strong>alfabeto em LIBRAS</strong>,<br>conforme mostra a imagem abaixo:
-    </p><img src="./img/alfabeto libras.jpg" id="abc">
+    </p><img src="/img/alfabeto libras.jpg" id="abc">
     <br>
 
     <div vw class="enabled">
