--- a/asset/numeros.html
+++ b/asset/numeros.html
@@ -15,8 +15,8 @@
 <body class="p-3 m-0 border-0 bd-example ">
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="home.html">
-            <img src="./img/Texto do seu parágrafo (3).png" width="40px" height="40px">
+          <a class="navbar-brand text-white" href="/home.html">
+            <img src="/img/Texto do seu parágrafo (3).png" width="40px" height="40px">
             Libras.com</a>
           <button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-primary"></span>
@@ -37,7 +37,7 @@
                   <li><a class="dropdown-item" href="Curso-de-Libras.html">Curso De Libras</a></li>
                   <li><a class="dropdown-item" href="https://t.me/librascom">Grupo Do Telegram</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="./login.html">Login</a></li>
+                  <li><a class="dropdown-item" href="/login/login.html">Login</a></li>
                 </ul>
               </li>
               
@@ -52,7 +52,7 @@
       A seguir estão os sinais em LIBRAS para os números cardinais:
       <br>
   
-      <img src="./img/numeros-em-libras.jpg" id="numeros">
+      <img src="/img/numeros-em-libras.jpg" id="numeros">
         <br>
   
       <p>
