--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg bg-primary">
           <div class="container-fluid">
             <a class="navbar-brand text-white" href="home.html">
-              <img src="./img/Texto do seu parágrafo (3).png" width="40px" height="40px">
+              <img src="asset/img/Texto do seu parágrafo (3).png" width="40px" height="40px">
               Libras.com</a>
               <button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon text-primary"></span>
@@ -39,7 +39,7 @@
                     <li><a class="dropdown-item" href="asset/Curso-de-Libras.html">Curso De Libras</a></li>
                     <li><a class="dropdown-item" href="https://t.me/librascom">Grupo Do Telegram</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="login/login.html">Login</a></li>
+                    <li><a class="dropdown-item" href="asset/login/login.html">Login</a></li>
                   </ul>
                 </li>
                 
@@ -49,23 +49,23 @@
           </div>
         </nav><br>
 
-        <video width="420" height="600" controls>
+        <!-- <video width="420" height="600" controls>
           <source src="./video/lv_0_20221207142505.mp4" type="video/mp4">
-        </video>
+        </video> -->
 
       <h1>O que é Libras?</h1><br>
 
       <p>LIBRAS é a sigla de Língua Brasileira de Sinais, um conjunto de formas gestuais <br> utilizado  por deficientes auditivos para a comunicação entre eles e outras pessoas, <br> sejam elas surdas ou ouvintes. <br>
          
       Ela tem sua origem baseada na Língua de sinais francesa e é um dos conjuntos de sinais <br> existentes no mundo inteiro  com o propósito de realizar a comunicação entre pessoas <br> com deficiência auditiva.</p>
-      <img src="./img/importancia-disciplina-libras-servico-social-1612817976.jpeg" width="400px" height="200x">
+      <img src="asset/img/importancia-disciplina-libras-servico-social-1612817976.jpeg" width="400px" height="200x">
 
       <div align="right">
       <h1>O que significa Libras?</h1><br>
       <p>
         Libras é a sigla da Língua Brasileira de Sinais, uma língua de modalidade gestual-visual onde é <br> possível se comunicar através de gestos, expressões faciais e corporais. É reconhecida como meio <br>     legal de comunicação e expressão desde 24 de Abril de 2002, <br> através da Lei nº 10.436. A Libras é muito utilizada na comunicação com pessoas surdas, sendo, <br> portanto, uma importante ferramenta de inclusão social.
       </p>
-      <img src="./img/162246473560b4d8dfa9556_1622464735_3x2_md.jpg" width= "400px" height="250px">
+      <img src="asset/img/162246473560b4d8dfa9556_1622464735_3x2_md.jpg" width= "400px" height="250px">
     </div>
 
     <h1>O que é cultura do surdo?</h1>
@@ -75,7 +75,7 @@
       A cultura surda engloba possibilidades e elementos próprios da vida <br> dos sujeitos que se reconhecem como surdos, abrangendo não apenas <br> aspectos mais corriqueiros da vida de cada um, mas também o grupo social <br> que constituem.
     </p>
 
-    <img src="./img/Love.jpeg" width="400px "height="250px">
+    <img src="asset/img/Love.jpeg" width="400px "height="250px">
 
     <div vw class="enabled">
       <div vw-access-button class="active"></div>
