--- a/asset/numeros.html
+++ b/asset/numeros.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./img/Texto do seu parágrafo (3).png" type="image/png">
+  <link rel="shortcut icon" href="img/Texto do seu parágrafo (3).png" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="./CSS/bootstrap.min.css">
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand text-white" href="/home.html">
-            <img src="/img/Texto do seu parágrafo (3).png" width="40px" height="40px">
+            <img src="img/Texto do seu parágrafo (3).png" width="40px" height="40px">
             Libras.com</a>
           <button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-primary"></span>
@@ -37,7 +37,7 @@
                   <li><a class="dropdown-item" href="Curso-de-Libras.html">Curso De Libras</a></li>
                   <li><a class="dropdown-item" href="https://t.me/librascom">Grupo Do Telegram</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/login/login.html">Login</a></li>
+                  <li><a class="dropdown-item" href="login/login.html">Login</a></li>
                 </ul>
               </li>
               
@@ -52,7 +52,7 @@
       A seguir estão os sinais em LIBRAS para os números cardinais:
       <br>
   
-      <img src="/img/numeros-em-libras.jpg" id="numeros">
+      <img src="img/numeros-em-libras.jpg" id="numeros">
         <br>
   
       <p>
