--- a/asset/numeros.html
+++ b/asset/numeros.html
@@ -15,7 +15,7 @@
 <body class="p-3 m-0 border-0 bd-example ">
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="/home.html">
+          <a class="navbar-brand text-white" href="/index.html">
             <img src="img/Texto do seu parágrafo (3).png" width="40px" height="40px">
             Libras.com</a>
           <button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
